# Xlink-Identifier

./: README.md
apollo-master/: .gitignore  CMakeLists.txt
apollo-master/apollo/src/: .apollo.cpp.swo  CMakeLists.txt  apollo.cpp  orig_sandbox.cpp  sandbox.cpp
apollo-master/cmake/Modules/: FindJsoncpp.cmake  FindLog4cplus.cmake
apollo-master/libapollo/: CMakeLists.txt
apollo-master/libapollo/analysis/: CMakeLists.txt  peptidesearch.cpp  peptidesearch.hpp  sp.cpp  sp.hpp  xcorrelation.cpp  xcorrelation.hpp
apollo-master/libapollo/core/: CMakeLists.txt  digesttolerance.cpp  digesttolerance.hpp  generator.hpp  generatoriterator.hpp  geometryutil.cpp  geometryutil.hpp  intrareactiongroup.cpp  intrareactiongroup.hpp  linker.cpp  linker.hpp  linkermap.hpp  linkers.cpp  linkers.hpp  locset.cpp  locset.hpp  macros.hpp  multireflocset.cpp  multireflocset.hpp  multirefresiduecount.cpp  multirefresiduecount.hpp  rangeiter.hpp  reactiongroup.cpp  reactiongroup.hpp  refutil.hpp  regexdigest.cpp  regexdigest.hpp  regexmap.hpp  residuecalc.cpp  residuecalc.hpp  sequence.cpp  sequence.hpp  sequencechain.cpp  sequencechain.hpp  sequencepart.cpp  sequencepart.hpp  sequenceterminals.cpp  sequenceterminals.hpp  stdcharge.hpp  stdmass.cpp  (+1 more)
apollo-master/libapollo/experiment/: CMakeLists.txt  denoise.cpp  denoise.hpp  experimentutils.cpp  experimentutils.hpp  normalize.cpp  normalize.hpp
apollo-master/libapollo/filter/: CMakeLists.txt  f_modcount.cpp  f_modcount.hpp  f_multimodcount.cpp  f_multimodcount.hpp  f_multimodloc.cpp  f_multimodloc.hpp  f_mz.cpp  f_mz.hpp  filterinterface.hpp
apollo-master/libapollo/include/: ThreadPool.hpp  aggregateset.hpp  analysis.hpp  analysistypes.hpp  candidateions.hpp  candidatepeptides.hpp  dtatypes.hpp  enums.hpp  exceptions.hpp  fastatypes.hpp  ionconfig.hpp  ionmodification.hpp  linkloc.hpp  locresiduemap.hpp  mz.hpp  options.hpp  optiontypes.hpp  pathvector.hpp  readdtas.hpp  readfastas.hpp  reports.hpp  residuecount.hpp  residuemass.hpp  residuemod.hpp  residueset.hpp  sequenceconfig.hpp  sequenceinterface.hpp  sequencescore.hpp  spectrumtypes.hpp  spresult.hpp  stdrun.hpp  theory.hpp  theorytypes.hpp  types.hpp  units.hpp
apollo-master/libapollo/include/boost/: combination.hpp
apollo-master/libapollo/io/: CMakeLists.txt  dtareader.hpp  fastagen.cpp  fastagen.hpp  fastaiter.hpp  optionsreader.cpp  optionsreader.hpp
apollo-master/libapollo/scoring/: CMakeLists.txt
apollo-master/libapollo/src/: .ionconfig.cpp.swp  CMakeLists.txt  analysis.cpp  candidateions.cpp  candidatepeptides.cpp  enums.cpp  ionconfig.cpp  linkloc.cpp  locresiduemap.cpp  mz.cpp  options.cpp  optiontypes.cpp  pathvector.cpp  readdtas.cpp  readfastas.cpp  reports.cpp  residuecount.cpp  residuemass.cpp  residuemod.cpp  residueset.cpp  sequenceconfig.cpp  sequencescore.cpp  spectrumtypes.cpp  stdrun.cpp  theory.cpp
apollo-master/libapollo/theory/: CMakeLists.txt
apollo-master/libapollo/theory/ion/: CMakeLists.txt  interlinkioncfggen.cpp  interlinkioncfggen.hpp  interlinkioncfgiter.hpp  intralinkioncfggen.cpp  intralinkioncfggen.hpp  intralinkioncfgiter.hpp  linkioncfggen.cpp  linkioncfggen.hpp  linkioncfgiter.hpp  mzionspecgen.cpp  mzionspecgen.hpp  mzionspeciter.hpp  ulinkioncfggen.cpp  ulinkioncfggen.hpp  ulinkioncfgiter.hpp
apollo-master/libapollo/theory/sequence/: CMakeLists.txt  fullytrypticgen.cpp  fullytrypticgen.hpp  fullytrypticiter.hpp  linklocgen.cpp  linklocgen.hpp  linklociter.hpp  locationutil.cpp  locationutil.hpp  modcountgen.cpp  modcountgen.hpp  modcountiter.hpp  modlocgen.cpp  modlocgen.hpp  modlociter.hpp  multimodcountgen.cpp  multimodcountgen.hpp  multimodcountiter.hpp  multimodlocgen.cpp  multimodlocgen.hpp  multimodlociter.hpp  ntrypticgen.cpp  ntrypticgen.hpp  ntrypticiter.hpp  sequencemhgen.cpp  sequencemhgen.hpp  sequencemhiter.hpp
apollo-master/testdir/: options.json
apollo-master/testdir/dta/: eluatHCL0-1M-CID-HCD.2372.2372.4.dta  eluatHCL0-1M-CID-HCD.2379.2379.4.dta  eluatHCL0-1M-CID-HCD.2612.2612.4.dta
